<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- pedir_cita_paciente strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="reservar_string">Reservar</string>
    <string name="pedir_cita_string">Pedir cita</string>
    <string name="seleccione_el_d_a_string">Seleccione el da</string>
    <string name="seleccione_la_hora_string">Seleccione la hora</string>
    <string name="medicaid_string">MedicAid</string>
    <string name="health_management_software_string">Health management software</string>
    <string name="pr_ximas_citas_string">Prximas citas</string>
    <string name="informes_ek1_string">Informes</string>
    <string name="pedir_cita_ek1_string">Pedir cita</string>
    <string name="bienvenido_string">Bienvenido</string>
    <string name="nombre_y_apellidos_string">Nombre y apellidos</string>
    <string name="calendario_string">Calendario</string>
    <string name="seleccione_el_d_a_ek1_string">Seleccione el da</string>
    <string name="nombre_paciente_string">Nombre Paciente</string>
    <string name="generar_informe_string">Generar Informe</string>
    <string name="pr_ximas_citas_ek1_string">Prximas citas</string>
    <string name="informes_ek2_string">Informes</string>
    <string name="medicaid_ek1_string">MedicAid</string>
    <string name="health_management_software_ek1_string">Health management software</string>
    <string name="calendario_ek2_string">Calendario</string>
    <string name="sesi_n_cita_ek1_string">Sesin cita</string>
    <string name="bienvenido_ek1_string">Bienvenido</string>
    <string name="nombre_y_apellidos_ek1_string">Nombre y apellidos</string>
    <string name="medicaid_ek2_string">MedicAid</string>
    <string name="health_management_software_ek2_string">Health management software</string>
    <string name="bienvenido_a_medicaid_string">Bienvenido a MedicAid</string>
    <string name="crear_usuario_ek3_string">Crear usuario</string>
    <string name="confirma_tu_contrase_a_string">Confirma tu contrasea</string>
    <string name="contrase_a_string">Contrasea</string>
    <string name="dni_ek1_string">Dni</string>
    <string name="nombre_y_apellidos_ek3_string">Nombre y Apellidos</string>
    <string name="modifique_sus_datos_string">Modifique sus datos</string>
    <string name="guardar_string">Guardar</string>
    <string name="confirma_tu_contrase_a_ek1_string">Confirma tu contrasea</string>
    <string name="edad_ek1_string">Edad</string>
    <string name="contrase_a_ek1_string">Contrasea</string>
    <string name="dni_ek3_string">Dni</string>
    <string name="nombre_y_apellidos_ek5_string">Nombre y Apellidos</string>
    <string name="ajustes_string">Ajustes</string>
    <string name="modifique_sus_datos_ek1_string">Modifique sus datos</string>
    <string name="guardar_ek1_string">Guardar</string>
    <string name="confirma_tu_contrase_a_ek2_string">Confirma tu contrasea</string>
    <string name="especialidad_string">Especialidad</string>
    <string name="contrase_a_ek2_string">Contrasea</string>
    <string name="dni_ek5_string">Dni</string>
    <string name="nombre_y_apellidos_ek7_string">Nombre y Apellidos</string>
    <string name="ajustes_ek1_string">Ajustes</string>
    <string name="siguiente_string">Siguiente</string>
    <string name="dni_ek7_string">Dni</string>
    <string name="introduzca_el_dni_del_paciente_string">Introduzca el dni del paciente</string>
    <string name="medicaid_ek3_string">MedicAid</string>
    <string name="health_management_software_ek3_string">Health management software</string>
    <string name="bienvenido_a_medicaid_ek1_string">Bienvenido a MedicAid</string>
    <string name="entrar_string">Entrar</string>
    <string name="has_olvidado_tu_contrase_a__string">Has olvidado tu contrasea?</string>
    <string name="contrase_a_ek3_string">Contrasea</string>
    <string name="dni_ek9_string">Dni</string>
    <string name="medicaid_ek4_string">MedicAid</string>
    <string name="health_management_software_ek4_string">Health management software</string>
    <string name="entrar_ek1_string">Entrar</string>
    <string name="no_tienes_una_cuenta__registrate_string">No tienes una cuenta? Registrate</string>
</resources>