<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >
    <ScrollView android:id="@+id/inicio_sesion"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout android:id="@+id/page_inicio_sesion_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__inicio_sesion_ek2"
                    android:background="@drawable/_bg__inicio_sesion_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="411dp"
                    android:layout_height="731dp" />



                <RelativeLayout android:id="@+id/t_tulo_ek3"
                    android:layout_marginTop="56dp"
                    android:layout_marginStart="122dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView android:id="@+id/medicaid_ek3"
                        android:textStyle="bold"
                        android:textSize="38sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="208dp"
                        android:layout_height="79dp"
                        android:text="@string/medicaid_ek3_string"
                        />

                    <TextView android:id="@+id/health_management_software_ek3"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="49dp"
                        android:layout_width="184dp"
                        android:layout_height="24dp"
                        android:text="@string/health_management_software_ek3_string"
                        />

                </RelativeLayout>

                <View   android:id="@+id/formulario_inicio"
                    android:background="@drawable/formulario_inicio_shape"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="206dp"
                    android:layout_width="355dp"
                    android:layout_height="383dp" />

                <TextView android:id="@+id/bienvenido_a_medicaid_ek1"
                    android:textSize="18sp"
                    android:textColor="@color/rectangle_3_color"
                    android:layout_marginLeft="113dp"
                    android:layout_marginTop="236dp"
                    android:layout_width="208dp"
                    android:layout_height="38dp"
                    android:text="@string/bienvenido_a_medicaid_ek1_string"
                    />


                <RelativeLayout android:id="@+id/login_button"
                    android:layout_marginTop="458dp"
                    android:layout_marginStart="81dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/entrarButton"
                        android:background="@drawable/rectangle_1_ek4_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="250dp"
                        android:layout_height="64dp" />

                    <TextView android:id="@+id/entrar"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="96dp"
                        android:layout_marginTop="19dp"
                        android:layout_width="83dp"
                        android:layout_height="41dp"
                        android:text="@string/entrar_string"
                        />

                </RelativeLayout>

                <RelativeLayout android:id="@+id/password"
                    android:layout_marginTop="360dp"
                    android:layout_marginStart="106dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <EditText android:id="@+id/contraseñaEditText"
                        android:textSize="16sp"
                        android:textColor="@color/line_1_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="180dp"
                        android:layout_height="55dp"
                        android:hint=" Contraseña"
                        android:inputType="textPassword"
                        />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/dni_ek8"
                    android:layout_marginTop="305dp"
                    android:layout_marginStart="106dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <EditText android:id="@+id/dniEditText"
                        android:textSize="16sp"
                        android:textColor="@color/line_1_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="180dp"
                        android:layout_height="55dp"
                        android:hint=" Dni"
                        />

                </RelativeLayout>

                <TextView
                    android:id="@+id/crearUsuarioTextView"
                    android:textColor="@color/rectangle_3_color"
                    android:textSize="18dp"
                    android:layout_marginStart="154dp"
                    android:layout_marginTop="542dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="Crear usuario"
                    android:onClick="irCrearusuario"/>

            </RelativeLayout>


        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>