<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView android:id="@+id/home_paciente"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_home_paciente_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__home_paciente_ek2"
                    android:background="@drawable/_bg__home_paciente_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="411dp"
                    android:layout_height="731dp" />


                <RelativeLayout android:id="@+id/t_tulo"
                    android:layout_marginTop="575dp"
                    android:layout_marginStart="122dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView android:id="@+id/medicaid"
                        android:textStyle="bold"
                        android:textSize="38sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="208dp"
                        android:layout_height="79dp"
                        android:text="@string/medicaid_string"
                        />

                    <TextView android:id="@+id/health_management_software"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="49dp"
                        android:layout_width="184dp"
                        android:layout_height="24dp"
                        android:text="@string/health_management_software_string"
                        />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/consultarcitas"
                    android:layout_marginTop="285dp"
                    android:layout_marginStart="76dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >


                    <RelativeLayout android:id="@+id/opciones"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/btnProximaCi"
                            android:background="@drawable/rectangle_3_ek1_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="259dp"
                            android:layout_height="70dp" />

                        <TextView android:id="@+id/pr_ximas_citas"
                            android:textStyle="bold"
                            android:textSize="24sp"
                            android:textColor="@color/reservar_color"
                            android:layout_marginLeft="84dp"
                            android:layout_marginTop="18dp"
                            android:layout_width="191dp"
                            android:layout_height="50dp"
                            android:text="Próximas citas"
                            />

                    </RelativeLayout>

                    <ImageView android:id="@+id/consultarlogo"
                        android:src="@drawable/consultarlogo"
                        android:contentDescription="consultarlogo"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="13dp"
                        android:layout_width="36dp"
                        android:layout_height="40dp" />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/informes"
                    android:layout_marginTop="385dp"
                    android:layout_marginStart="76dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/btnInformes"
                        android:background="@drawable/rectangle_3_ek2_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="259dp"
                        android:layout_height="70dp" />

                    <TextView android:id="@+id/informes_ek1"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="14dp"
                        android:layout_width="168dp"
                        android:layout_height="38dp"
                        android:text="@string/informes_ek1_string"
                        />

                    <ImageView android:id="@+id/informelogo"
                        android:src="@drawable/informelogo"
                        android:contentDescription="informelogo"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="13dp"
                        android:layout_width="36dp"
                        android:layout_height="40dp" />

                </RelativeLayout>

                <RelativeLayout android:id="@+id/urgencias"
                    android:layout_marginTop="485dp"
                    android:layout_marginStart="76dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/botonUrgencias"
                        android:background="@drawable/rectangle_3_ek2_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="259dp"
                        android:layout_height="70dp" />

                    <TextView android:id="@+id/urgenciasEditText"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="90dp"
                        android:layout_marginTop="14dp"
                        android:layout_width="168dp"
                        android:layout_height="38dp"
                        android:text="Urgencias"
                        />

                    <ImageView android:id="@+id/urgenciaslogo"
                        android:src="@drawable/hospital_solid"
                        android:contentDescription="hospital-solid"
                        android:tint="@color/white"
                        android:layout_marginStart="27dp"
                        android:layout_marginTop="13dp"
                        android:layout_width="36dp"
                        android:layout_height="40dp" />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/pedircita"
                    android:layout_marginTop="180dp"
                    android:layout_marginStart="76dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >


                    <RelativeLayout android:id="@+id/opciones_ek1"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/btnPedirCita"
                            android:background="@drawable/rectangle_3_ek3_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="259dp"
                            android:layout_height="70dp" />

                    </RelativeLayout>

                    <TextView android:id="@+id/pedir_cita_ek1"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="92dp"
                        android:layout_marginTop="17dp"
                        android:layout_width="134dp"
                        android:layout_height="50dp"
                        android:text="@string/pedir_cita_ek1_string"
                        />

                    <ImageView android:id="@+id/a_adirlogo"
                        android:src="@drawable/a_adirlogo"
                        android:contentDescription="a_adirlogo"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="14dp"
                        android:layout_width="36dp"
                        android:layout_height="40dp" />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/parte_inicial_arriba_ek1"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="21dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView android:id="@+id/bienvenido"
                        android:textStyle="bold"
                        android:textSize="36sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="95dp"
                        android:layout_marginTop="52dp"
                        android:layout_width="227dp"
                        android:layout_height="74dp"
                        android:text="@string/bienvenido_string"
                        />

                    <TextView android:id="@+id/txtnombre"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="94dp"
                        android:layout_marginTop="104dp"
                        android:layout_width="206dp"
                        android:layout_height="41dp"
                        android:text="@string/nombre_y_apellidos_string"
                        />


                    <RelativeLayout android:id="@+id/home_buttons_ek1"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <ImageView android:id="@+id/homeButton"
                            android:src="@drawable/home_ek1"
                            android:contentDescription="home_ek1"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="40dp"
                            android:layout_height="40dp" />



                    </RelativeLayout>

                </RelativeLayout>


                <RelativeLayout android:id="@+id/frame"
                    android:layout_marginTop="64dp"
                    android:layout_marginStart="-76dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                </RelativeLayout>

            </RelativeLayout>



        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>