<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content" >

    <ScrollView android:id="@+id/crear_usuario"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >


            <RelativeLayout android:id="@+id/page_crear_usuario_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__crear_usuario_ek2"
                    android:background="@drawable/_bg__crear_usuario_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="411dp"
                    android:layout_height="731dp" />


                <RelativeLayout android:id="@+id/t_tulo_ek2"
                    android:layout_marginTop="56dp"
                    android:layout_marginStart="122dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <TextView android:id="@+id/medicaid_ek2"
                        android:textStyle="bold"
                        android:textSize="38sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="208dp"
                        android:layout_height="79dp"
                        android:text="@string/medicaid_ek2_string"
                        />

                    <TextView android:id="@+id/health_management_software_ek2"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="49dp"
                        android:layout_width="184dp"
                        android:layout_height="24dp"
                        android:text="@string/health_management_software_ek2_string"
                        />

                </RelativeLayout>

                <View   android:id="@+id/rectangle_2"
                    android:background="@drawable/rectangle_2_shape"
                    android:layout_marginStart="28dp"
                    android:layout_marginTop="209dp"
                    android:layout_width="355dp"
                    android:layout_height="383dp" />

                <TextView android:id="@+id/bienvenido_a_medicaid"
                    android:textSize="18sp"
                    android:textColor="@color/rectangle_3_color"
                    android:layout_marginLeft="113dp"
                    android:layout_marginTop="236dp"
                    android:layout_width="208dp"
                    android:layout_height="38dp"
                    android:text="@string/bienvenido_a_medicaid_string"
                    />


                <RelativeLayout android:id="@+id/create_user_button"
                    android:layout_marginTop="507dp"
                    android:layout_marginStart="81dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/crearUsuarioButton"
                        android:background="@drawable/rectangle_1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="250dp"
                        android:layout_height="64dp" />

                    <TextView android:id="@+id/crear_usuario_ek3"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/reservar_color"
                        android:layout_marginLeft="63dp"
                        android:layout_marginTop="19dp"
                        android:layout_width="150dp"
                        android:layout_height="41dp"
                        android:text="@string/crear_usuario_ek3_string"
                        />

                </RelativeLayout>


                <RelativeLayout android:id="@+id/password2"
                    android:layout_marginTop="443dp"
                    android:layout_marginStart="106dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/contraseña2EditText"
                        android:textSize="16sp"
                        android:textColor="@color/line_1_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="Confirma tu contraseña"/>

                </RelativeLayout>


                <RelativeLayout android:id="@+id/password1"
                    android:layout_marginTop="399dp"
                    android:layout_marginStart="106dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/contraseña1EditText"
                        android:textSize="16sp"
                        android:textColor="@color/line_1_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="Contraseña"/>

                </RelativeLayout>


                <RelativeLayout android:id="@+id/dni"
                    android:layout_marginTop="354dp"
                    android:layout_marginStart="106dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/dniEditText"
                        android:textSize="16sp"
                        android:textColor="@color/line_1_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:hint="Dni"/>

                </RelativeLayout>


                <RelativeLayout android:id="@+id/nombre_y_apellidos_ek2"
                    android:layout_marginTop="305dp"
                    android:layout_marginStart="106dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/nombreApellidosEditText"
                        android:textSize="16sp"
                        android:textColor="@color/line_1_color"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:hint="Nombre y Apellidos"/>

                </RelativeLayout>

            </RelativeLayout>




        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>